# automated-testing-django

./: Procfile  README.md  db.sqlite3  pyproject.toml  pytest.ini  requirements.txt  runtime.txt
.github/workflows/: django.yaml
app/: filters.py  models.py  test_file.py  urls.py  views.py
app/migrations/: 0001_initial.py
app/templates/: base.html  head.html  head_crud.html  home.html  navbar.html
app/templates/assignmentResult_project/: AddAssignmentResult.html  RetreiveAssignmentResults.html  deleteAssignment.html  updateAssignment.html
app/templates/assignment_project/: AddAssignment.html  RetreiveAssignment.html  deleteAssignment.html  updateAssignment.html
app/templates/course_project/: AddCourse.html  RetreiveCourses.html  StatisticsCourse.html  addStudentCourse.html  deleteCourse.html  studentsCourse.html
app/templates/registration/: login.html
app/templates/student_project/: AddStudent.html  AssignStudent.html  RetreiveStudents.html  SleepStudent.html  StudentCourses.html  StudentGrades.html  deleteStudent.html  updateStudent.html
app/templatetags/: tags.py
django_project/: settings.py  urls.py
