[tool.poetry]
name = "django-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "django_project"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.2"
django-filter = "^22.1"
setuptools = "^65.5.1"
gunicorn = "^20.1.0"
django-on-heroku = "^1.1.2"
coverage = "^7.1.0"
pytest = "^7.2.1"
pytest-django = "^4.5.2"
mixer = "^7.2.2"
requests = "^2.28.2"
dj-database-url = "1.0.0"
whitenoise = "^6.3.0"
asgiref = "^3.6.0"
backports-zoneinfo = "^0.2.1"
certifi = "^2022.12.7"
charset-normalizer = "^3.0.1"
idna = "^3.4"
psycopg2-binary = "^2.9.5"
urllib3 = "^1.26.14"
sqlparse = "^0.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
